# shopping_py

./: .gitignore  Dockerfile  README.md  pyproject.toml  shopping_list.py
.github/workflows/: build.yml
